--- a/front/src/styles/navbar.css
+++ b/front/src/styles/navbar.css
@@ -1,6 +1,6 @@
 .navbar {
-  background-color: #1f5156;
-  height: 80px;
+  background-color: rgba(18, 18, 182, 0.768);
+  height: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -10,9 +10,32 @@
   z-index: 20;
 }
 
+.navbar-brand{
+  color: #000;  
+}
+.navbar-brand:hover  {
+  color: #000;  
+}
+
 
 /* Para que los dropdowns se desplieguen con hover */
 .nav-item.dropdown:hover .dropdown-menu {
+  display: block;
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+}
+
+.nav-item.dropdown::after .dropdown-menu {
+  display: block;
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 2.3s ease, visibility 2.3s ease;
+}
+
+
+.dropUser .dropdown-menu {
+  z-index: 4000;
   display: block;
   opacity: 1;
   visibility: visible;
@@ -37,12 +60,12 @@
 .dropdown-item {
   padding: 10px 15px;
   cursor: pointer;
-  color: #333;
+  color: #001;
   text-decoration: none;
 }
 
-.dropdown-item:hover {
-  background-color: #e3e3e3;
+.dark .dropdown-item:hover {
+  background-color: rgb(42, 42, 65); 
 }
 
 
@@ -57,7 +80,7 @@
 }
 
 .nav-logo {
-  color: #3333ff;
+  color: #001;
   align-items: center;
   margin-left: 20px;
   cursor: pointer;
@@ -108,16 +131,16 @@
 
 .nav-item:hover:after {
   width: 100%;
-  background: #4444ff;
+  background: #001;
 }
 
 .nav-item .active {
-  color: #4444ff;
+  color: #001;
 }
 
 .nav-icon {
   display: none;
-  color: #3333ff;
+  color: #001;
 }
 
 .nav-icon .icon {
@@ -126,33 +149,51 @@
   height: 2rem;
 }
 
+
+
+
 @media screen and (max-width: 960px) {
+   
+  .navbar {
+    background-color: #fff;
+    height:  1px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2rem;
+    position: sticky;
+    top: 0;
+    z-index: 20;
+  }
+
   .nav-menu {
     display: flex;
     flex-direction: column;
     width: 100%;
-    border-top: 1pxsolid #fff;
+    border-top: 1px solid #009;
     position: absolute;
-    top: 80px;
+    top: -10px;
     left: -110%;
     opacity: 1;
-    transition: all 0.5s ease;
+    transition: all 0.9s ease;
   }
 
+ 
   .nav-menu.active {
-    background: #1f5156;
+    background: rgba(18, 18, 182, 0.768);
     left: 0px;
+      
     opacity: 1;
-    transition: all 0.5s ease;
+    transition: all 0.9s ease;  
     z-index: 1;
   }
   .nav-item .active {
-    color: #4444ff;
+    color: #001;
     border: none;
   }
   .nav-links {
     padding: 1.5rem;
-    width: 100%;
+    width: 1000%;
     display: table;
   }
 
@@ -165,12 +206,13 @@
     display: block;
     position: absolute;
     top: 50%;
-    right: 0;
+    left: 10%;
     transform: translate(-100%, -50%);
     width: 2rem;
     height: 2rem;
     cursor: pointer;
-    color: #4444ff;
+    color: #001;
+    z-index: 30;
   }
 }
 
