--- a/front/src/styles/navbar.css
+++ b/front/src/styles/navbar.css
@@ -150,9 +150,28 @@
 }
 
 
-
+.switch-container {
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
 @media screen and (max-width: 960px) {
+
+
+  .switch-container {
+    display: block;
+    width: 100%;
+    margin-top: 1rem;
+  }
+
+  .switch-container span {
+    font-size: 0.9rem;
+    
+    text-align: center;
+  }
+
    
   .navbar {
     background-color: #fff;
@@ -180,9 +199,9 @@
 
  
   .nav-menu.active {
-    background: rgba(18, 18, 182, 0.768);
+    background: rgba(18, 18, 192, .900);
     left: 0px;
-      
+    height: 1000px;      
     opacity: 1;
     transition: all 0.9s ease;  
     z-index: 1;
@@ -205,7 +224,7 @@
   .nav-icon {
     display: block;
     position: absolute;
-    top: 50%;
+    top: 100%;
     left: 10%;
     transform: translate(-100%, -50%);
     width: 2rem;
@@ -215,31 +234,4 @@
     z-index: 30;
   }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
